--- a/ui/electron/css/style.css
+++ b/ui/electron/css/style.css
@@ -52,10 +52,26 @@ li span.info {
 }
 
 .preloader-wrapper.xsmall {
-  width: 24px;
-  height: 24px;
+  width: 21px;
+  height: 21px;
   position: relative;
   /* Adjust these values accordingly */
   top: -5px;
   left: -5px;
+}
+
+#backup-status-text {
+  font-size: 10px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.progress {
+  /* position: relative;
+  height: 4px;
+  display: block;
+  width: 100%;
+  background-color: #acece6;
+  border-radius: 2px; */
+  margin: .5rem 0 0.5rem 0;
 }
