--- a/ui/electron/css/style.css
+++ b/ui/electron/css/style.css
@@ -43,14 +43,6 @@ li span.info {
   padding: 1px;
 }
 
-.material-icons {
-  padding-right: 10px;
-  position: relative;
-  /* Adjust these values accordingly */
-  top: 5px;
-  left: 5px;
-}
-
 .preloader-wrapper.xsmall {
   width: 21px;
   height: 21px;
@@ -67,11 +59,7 @@ li span.info {
 }
 
 .progress {
-  /* position: relative;
-  height: 4px;
-  display: block;
-  width: 100%;
-  border-radius: 2px; */
+  border-radius: 2px;
   background-color:whitesmoke;
   margin: 0 0 0.5rem 0;
 }
