call backend from render

--- a/ui/electron/view/progress.html
+++ b/ui/electron/view/progress.html
@@ -18,7 +18,7 @@
         <div class="nav-wrapper">
             <ul class="tabs tabs-fixed-width z-depth-1">
                 <li class="tab"><a class="active" href="#progress">Progress</a></li>
-                <li class="tab"><a href="#settings">Settings</a></li>
+                <li class="tab"><a id="settings-tab" href="#settings">Settings</a></li>
             </ul>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                 <li class="collection-item" id="item-4" data-id=""></li>
             </ul>
         </div>
-        <div  id="settings" class="col s12">
+        <div id="settings" class="col s12">
             <ul class="collection">
                 <li class="collection-item">Foo</li>
                 <li class="collection-item">Bar</li>
