--- a/ui/electron/view/progress.html
+++ b/ui/electron/view/progress.html
@@ -14,14 +14,16 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <ul class="tabs tabs-fixed-width z-depth-1">
-                <li class="tab"><a class="active" href="#progress">Progress</a></li>
-                <li class="tab"><a id="settings-tab" href="#settings">Settings</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <ul class="tabs tabs-fixed-width z-depth-1">
+                    <li class="tab"><a class="active" href="#progress">Progress</a></li>
+                    <li class="tab"><a id="settings-tab" href="#settings">Settings</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="container">
         <div id="progress" class="col s12">
             <ul class="collection" id="list">
@@ -33,12 +35,12 @@
             </ul>
         </div>
         <div id="settings" class="col s12">
-            <ul class="collection">
-                <li class="collection-item">Foo</li>
+            <ul class="collection" id="directories-list">
+                <!-- <li class="collection-item">Foo</li>
                 <li class="collection-item">Bar</li>
                 <li class="collection-item">Buz</li>
                 <li class="collection-item"></li>
-                <li class="collection-item"></li>
+                <li class="collection-item"></li> -->
             </ul>
         </div>
     </div>
